<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jakascompany.myapplication.MainActivity"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:weightSum="1"
    >


    <TextView
        android:id="@+id/textView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text01"
        android:textColor="@color/White"
        android:layout_marginStart="10dp"
        android:layout_alignBaseline="@+id/editText02"
        android:layout_alignBottom="@+id/editText02"
        android:layout_toEndOf="@+id/editText02" />

    <TextView
        android:id="@+id/textView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/Text04"
        android:textColor="@color/White"
        android:layout_alignBaseline="@+id/editText01"
        android:layout_alignBottom="@+id/editText01"
        android:layout_alignEnd="@+id/textView01" />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/button_switch"
        android:textColor="@color/White"
        tools:checked="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Edit01Hint"
        android:textColor="@color/White"
        android:textColorHint="@color/Brown"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/editText02"
        android:layout_alignEnd="@+id/button01"
        android:layout_alignStart="@+id/button01" />

    <EditText
        android:id="@+id/editText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/Edit02Hint"
        android:textColor="@color/White"
        android:textColorHint="@color/Brown"
        android:layout_below="@+id/mySwitch"
        android:layout_alignEnd="@+id/editText01"
        android:layout_alignStart="@+id/editText01" />


    <Button
        android:id="@+id/button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/ButtonPink"
        android:onClick="countBMI_button"
        android:text="@string/button_BMI"
        android:layout_marginBottom="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



    <TextView
        android:id="@+id/textView03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor='@color/LightRed'
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText01"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor='@color/White'
        android:layout_marginTop="34dp"
        android:layout_alignTop="@+id/textView03"
        android:layout_alignStart="@+id/editText01"
        android:layout_alignEnd="@+id/editText01" />

    <TextView
        android:id="@+id/textView05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor='@color/White'
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/button01"
        android:layout_alignStart="@+id/button01"
        android:textSize="20sp"
        android:layout_alignEnd="@+id/button01" />
</RelativeLayout>
